lib/stratiform/res/test/stratiform/corpus/pos/pragma-schema-base256-signature.tel
tel 1.0 ḀḁЂЃĄąĆćȈȉЊḋЌḍĎďȐȑĒГДȕЖЗĘęȚțĜĝḞḟḠ
hello
