lib/stratiform/res/test/stratiform/corpus/neg/e122-invalid-schema-identifier.tel
tel 1.0 not-a-url-or-hash
hello
